added graph traits, boost graph adapter

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,9 @@ file(GLOB model_bsp_sources model/bsp/*.cpp)
 #Library: auxiliary
 file(GLOB auxiliary_sources auxiliary/*.cpp)
 
+#Library: auxiliary
+file(GLOB boost_graph_sources graph_implementations/boost_graphs/*.cpp)
+
 # # Library: simulation
 # file(GLOB simulation_sources simulation/*.cpp)
 
@@ -112,6 +115,7 @@ add_library( BspSchedulingLibrary STATIC
                                 #   ${file_interactions_sources}
                                     ${model_bsp_sources}
                                     ${io_sources}
+                                    ${boost_graph_sources}
                                 #   ${refine_sources}
                                 #   ${structures_sources}
                                     ${auxiliary_sources}
