--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,24 @@
+# Copyright 2024 Huawei Technologies Co., Ltd.
+
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+
+#     http://www.apache.org/licenses/LICENSE-2.0
+
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# @author Toni Boehnlein, Benjamin Lozes, Pal Andras Papp, Raphael S. Steiner
+
 cmake_minimum_required(VERSION 3.12)
-project(one-stop-parallel VERSION 0.2.0 LANGUAGES CXX)
+project(one-stop-parallel VERSION 1.0.0 LANGUAGES CXX)
+
+
+list( APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" )
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
@@ -12,15 +31,35 @@ add_compile_options(
     "-DNDEBUG" "-O3" "-Wall" -Wextra "-Wfatal-errors" "-Wconversion" "-Wsign-conversion" "-Wunused" "-Wunreachable-code" "-Wuninitialized" "-Wnrvo" # "-g" "-DNDEBUG" "-O3"
 )
 
-
 #Include directories
 include_directories(include)
 
+
+# Find COPT libraries
+find_package(COPT)
+
+# Find ICU libraries
+find_package(ICU COMPONENTS data i18n uc)
+include_directories(${ICU_INCLUDE_DIR})
+link_directories(${ICU_LIBRARIES})
+
 # Find Boost libraries
-# set(Boost_USE_STATIC_LIBS ON)
 find_package(Boost 1.71.0 REQUIRED COMPONENTS graph log log_setup OPTIONAL_COMPONENTS unit_test_framework )
 include_directories(${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIR})
+
+# Allow user to manually specify the Eigen include path
+find_package(Eigen3 3.4)
+
+if(Eigen3_FOUND)
+    message(STATUS "Eigen3 found!")
+    set(DEIGEN ON)
+    add_definitions(-DEIGEN_FOUND)
+    get_target_property(eigen_incs Eigen3::Eigen INTERFACE_INCLUDE_DIRECTORIES)
+    include_directories(${eigen_incs})
+else()
+    message(WARNING "Eigen3 not found. Some features may be disabled.")
+endif()
 
 
 # Find pthread library
