added hill climbing

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -35,6 +35,8 @@ _add_test( directed_graph_top_sort )
 
 _add_test( kl )
 
+_add_test( hill_climbing )
+
 ## bsp model
 _add_test( bsp_architecture )
 
