added long_edges_in_triangles_parallel + test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -29,6 +29,9 @@ ENDIF()
 
 
 ## graph algorithms
+
+_add_test( directed_graph_algorithms )
+
 _add_test( directed_graph_util )
 
 _add_test( directed_graph_top_sort )
