greedy recompute steps

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,6 +49,8 @@ _add_test( bsp_schedule )
 
 _add_test( bsp_schedule_recomp )
 
+_add_test( bsp_greedy_recomputer )
+
 ## pebbling model
 _add_test( pebbling_schedule_class )
 
