Adding sptrsv setup/kernels and permuter

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,6 +25,7 @@ _add_test( boost_graph_adaptor )
 _add_test ( connected_components_part )
 IF(Eigen3_FOUND)
 _add_test ( sparse_matrix_impl )
+_add_test( sptrsv )
 ENDIF()
 
 
