--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,7 +44,7 @@ _add_test( directed_graph_top_sort )
 
 _add_test( kl )
 
-_add_test( kl_test_2 )
+_add_test( kl_mem_constr )
 
 _add_test( hill_climbing )
 
